--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="sass\custom.css">
  
 </head>
 <body>
-  <main class="container d-flex align-items-center justify-content-center alto-100">
+  <main class="container d-flex align-items-center justify-content-center vh-100 alto-100">
     <div class="row">
        <!-- col izquierda-->
        <div class="col-12 col-lg-9 ">
          <div class="row">
            <div class="col-12 col-lg-8 p-2">
-             <article class="card h-100 bg-primary text-white fondo-card">
+             <article class="card h-100 bg-primary  shadow-lg text-white quotation">
                <div class="card-body">
                  <div class="d-flex mb-3">
                    <img class="border border-3 rounded-circle" src="\testimonials-grid-section-main\testimonials-grid-section-main\images\image-daniel.jpg" alt="">
@@ -31,7 +32,7 @@
              </article>
            </div>
            <div class="col-12 col-lg-4 p-2">
-            <article class="card h-100 bg-success text-white">
+            <article class="card h-100 bg-success shadow-lg text-white">
                <div class="card-body">
                  <div class="d-flex mb-3">
                    <img class="border border-3 rounded-circle" src="testimonials-grid-section-main\testimonials-grid-section-main\images\image-jonathan.jpg" alt="">
